[gd_scene load_steps=6 format=3 uid="uid://3s772lmgcd55"]

[ext_resource type="Script" uid="uid://bpajplhi2gkrk" path="res://Menu/settings.gd" id="1_omxsy"]
[ext_resource type="Texture2D" uid="uid://cwq5unpjcuc7x" path="res://Assets/background.png" id="1_yeaht"]
[ext_resource type="FontFile" uid="uid://dhi0h2gdkf5aj" path="res://Assets/PressStart2P-Regular.ttf" id="2_omxsy"]
[ext_resource type="AudioStream" uid="uid://c18gouhg1gmuj" path="res://Assets/Audio/BGM/bgm_menuCalmo.ogg" id="4_emm1k"]
[ext_resource type="AudioStream" uid="uid://bs4u3f00sxwbs" path="res://Assets/Audio/SFX/buttonpress.wav" id="5_iesh6"]

[node name="Control" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.992
offset_bottom = 0.18396
script = ExtResource("1_omxsy")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.005
anchor_bottom = 1.0
offset_right = 0.23999
offset_bottom = 4.0
texture = ExtResource("1_yeaht")

[node name="Control" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.26
anchor_top = 0.156
anchor_right = 0.73
anchor_bottom = 0.826
offset_left = -8.52002
offset_top = -0.307999
offset_right = 0.039978
offset_bottom = 68.882
theme_override_constants/separation = 50

[node name="Config" type="Label" parent="Control"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_omxsy")
theme_override_font_sizes/font_size = 50
text = "SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Config3" type="Label" parent="Control/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_omxsy")
theme_override_font_sizes/font_size = 30
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="Control/HBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="Config2" type="Label" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_omxsy")
theme_override_font_sizes/font_size = 30
text = "sfx"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider2" type="HSlider" parent="Control/HBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="CheckButton" type="CheckButton" parent="Control/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_omxsy")
theme_override_font_sizes/font_size = 19
button_pressed = true
text = "fullscreen"
flat = true

[node name="Voltar" type="Button" parent="." groups=["buttongroup"]]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.766
anchor_top = 0.037
anchor_right = 0.987
anchor_bottom = 0.096
offset_left = -0.432007
offset_top = 0.209
offset_right = -0.0240479
offset_bottom = 0.271999
focus_mode = 0
theme_override_fonts/font = ExtResource("2_omxsy")
theme_override_font_sizes/font_size = 30
action_mode = 0
text = "<- BACK
"
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_emm1k")
volume_db = -20.048
autoplay = true
bus = &"music"

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_iesh6")
volume_db = -9.999
bus = &"sfx"

[connection signal="value_changed" from="Control/HBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="Control/HBoxContainer/HSlider2" to="." method="_on_h_slider_2_value_changed"]
[connection signal="toggled" from="Control/HBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="Voltar" to="." method="_on_voltar_pressed"]
